updated rubocop yml to allow line metrics to 140

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,8 @@ AllCops:
   Exclude:
     - db/schema.rb
     - vendor/bundle/**/*
+Style/Encoding:
+  Enabled: false
+
+Metrics/LineLength:
+  Max: 140
